# lcsas

./: .gitignore  CLAUDE.md  CODE_REVIEW_CLEANUP.md  Makefile  README.md  pyproject.toml
.claude/commands/: pm.md
.github/prompts/: plan-phase5GapsAndHardening.prompt.md
.github/workflows/: audit-gate.yml  test.yml
docs/: CROSS_PLATFORM_META_RFC.md  DEVELOPMENT_PLAN.md  DVDISASTER_RS03_FORMAT.md  ESTATE_PLANNING.md  KEY_SHARE_FORMAT.md  PHASE_12_20_PLAN.md  RECOVERY_GUIDE.md  RECOVERY_RUNBOOK.md  SURVIVABILITY.md  TROUBLESHOOTING.md  WORKFLOWS.md  architecture.md
docs/workflows/: backup-and-scan.md  burn-iso-portable.md  consolidate-and-catalog-ops.md  init-and-config.md  location-management.md  meta-volume.md  multi-tenant.md  recovery-toolchain.md  restore-bare-metal.md  restore-disc-only.md  restore-host-linux.md  restore-host-macos.md  restore-windows.md  stage-and-burn.md  verify-and-audit.md
gemini_research/: 1 Cold Backup Workflow for Terabytes.rtf  1 Cold Backup Workflow for Terabytes.txt  2 Encrypted Pack File Volume Management.rtf  2 Encrypted Pack File Volume Management.txt  3 Decentralized Content-Addressable Archival Architecture.rtf  3 Decentralized Content-Addressable Archival Architecture.txt  4 LCSAS_ Decentralized Immutable Archival Architecture.rtf  4 LCSAS_ Decentralized Immutable Archival Architecture.txt
recovery/: .gitattributes  .gitignore  CLAUDE.md  MANIFEST.sha256  Makefile  UPSTREAM.sha256  VERSION
recovery/docs/: AUDIT.md  AUDIT_FINDINGS.md  BOOT.txt  BUILD.txt  CRYPTO.txt  DEFERRED_WORK.txt  ENV_VARS.txt  EXEMPTIONS.md  FORMAT.txt  MANIFEST.sha256  MULTI_DISC_DESIGN.txt  PHYSICAL_DISC_VALIDATION.txt  READINESS_CHECKLIST.txt  README.txt  RECOVER.txt  RECOVER_WINDOWS.txt  SANITIZER_SUPPRESSIONS.txt  TIERS.txt  UX_CONCERNS.txt  WINDOWS_RECOVERY_PLAN.txt
recovery/fuzz/: .gitignore  fuzz_b64.c  fuzz_json_parse.c  fuzz_path_safe.c  fuzz_repo_strip_v2.c  fuzz_zstd_decode.c
recovery/scripts/: coverage.sh  coverage_check.py  detect_arch.sh  exemptions_check.py  fetch_upstream.sh  malloc_inject.c  rebuild.sh  restore.bat  restore.sh  restore_auto.sh  run_coverage_fault_inject.sh  run_fault_inject.py  scaling_bench.py
recovery/specs/: README.txt  SHA256.txt  ecma-119.txt  fips180-4.txt  fips197.txt  restic-format.md
recovery/tests/: gen_keyshare_vectors.py  keyshare_vectors.h  test_aes.c  test_b64.c  test_bare_path.sh  test_catalog.c  test_disc_locator.c  test_e2e.py  test_e2e_windows.sh  test_hex.c  test_iso9660.py  test_json.c  test_json_decode_string.c  test_keyshare.c  test_multidisc.py  test_path.c  test_pbkdf2.c  test_poly1305.c  test_repo.c  test_scrypt.c  test_sha256.c  test_zstd.c
scripts/: cdemu_drive.sh  e2e_test.py  resize_test_lv.sh  setup_test_lv.sh  smoke_single_drive.py  teardown_test_lv.sh
src/lcsas/: __init__.py  __main__.py  constants.py  exceptions.py  log.py
tests/: conftest.py
tests/e2e/: test_scripts.py
tests/integration/: test_corrupt_disc_failover.py  test_disc_only_restore.py  test_ecc_repair.py  test_interactive_restore.py  test_meta_volume_restore.py  test_pure_python_restore.py  test_recovery_orchestration.py
tests/recovery_hardening/: README.md  _diff_helpers.py  conftest.py  test_agent_prompt.py  test_disc_swap_docs.py  test_env_var_docs.py  test_meta_bundling_completeness.py  test_multi_disc_design_header.py  test_no_bypass_check.py  test_operational_features.py  test_pack_cache.py  test_readiness_checklist.py  test_readme_invocation_parity.py  test_readme_simplification.py  test_restore_discovery.py  test_restore_no_recovery_binaries.py  test_restore_platform_detect.py  test_restore_sh_binary_corrupt.py  test_restore_sh_catalog_invalidation.py  test_restore_sh_relocate.py  test_restore_sh_repo_flag.py  test_restore_sh_ux.py  test_restore_sh_version_flag.py  test_restore_skips_tier2_on_multi_disc.py  test_setup_static_guards.py  test_standalone_zstandard_guard.py  test_tier1_aarch64_qemu.py  test_tier1_armv7_qemu.py  test_tier1_coverage_baseline.py  test_tier1_drive_disconnect.py  test_tier1_fat32_target.py  test_tier1_fault_handling.py  test_tier1_fault_inject.py  test_tier1_hardlinks.py  test_tier1_meta_disc_live.py  test_tier1_mtime.py  test_tier1_no_ftruncate_on_failure.py  test_tier1_ownership.py  test_tier1_petabyte_fixture.py  (+19 more)
tools/: cov_shell.py  gen_hardening_catalogue.py
(+229 files in other folders)
