[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lcsas"
version = "0.1.0"
description = "Linux Cold Storage Archival Suite — orchestrates Rustic, Xorriso, and DVDisaster for petabyte-scale optical archival"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [{name = "LCSAS Dev"}]
dependencies = []

[project.scripts]
lcsas = "lcsas.cli.main:main"

[project.optional-dependencies]
zstd = [
    "zstandard>=0.22",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests requiring external tools (deselect with '-m \"not integration\"')",
]
addopts = "-v --tb=short --basetemp=/var/tmp/pytest-lcsas"
tmp_path_retention_policy = "none"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
