[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lcsas"
version = "0.1.0"
description = "Linux Cold Storage Archival Suite — orchestrates Rustic, Xorriso, and DVDisaster for durable, offline-first optical cold archival"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [{name = "LCSAS Dev"}]
dependencies = []

[project.scripts]
lcsas = "lcsas.cli.main:main"

[project.optional-dependencies]
zstd = [
    "zstandard>=0.22",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    # zstandard is optional at RUNTIME (CLAUDE.md "Zero runtime dependencies")
    # but mandatory in the dev/CI environment: the integration suite exercises
    # the tier-3 pure-Python restorer against real rustic v2 blobs, which are
    # zstd-compressed.  Pinned here, not in base deps, on purpose.  See #141.
    "zstandard>=0.22",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests requiring external tools (deselect with '-m \"not integration\"')",
    "requires_rustic: test needs the rustic binary on PATH",
    "requires_xorriso: test needs the xorriso binary on PATH",
    "requires_dvdisaster: test needs the dvdisaster binary on PATH",
    "requires_cdemu: test needs the cdemu binary on PATH (and usually root)",
]
addopts = "-v --tb=short"
tmp_path_retention_policy = "none"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
